# lerobot_ros

./: .gitignore  README.md  pyproject.toml  ty.toml
config/so101/: params.yml  so101.toml
config/so101/calibrations/: so101_follower.json  so101_leader.json
src/lerobot_interfaces/: CMakeLists.txt  package.xml
src/lerobot_interfaces/msg/: TaskProgress.msg
src/lerobot_interfaces/srv/: Calibrate.srv  EndEpisode.srv  ListPolicies.srv  NewDataset.srv  SetActivePolicy.srv  StartEpisode.srv
src/lerobot_ros/: package.xml  setup.cfg  setup.py
src/lerobot_ros/lerobot_ros/: config.py  episode_tracker.py  episode_tracker_node.py  policy_controller.py  recorder.py  recorder_cli.py  replay.py  ros_torch_utils.py  subscriber.py
src/lerobot_ros/lerobot_ros/convert/: __init__.py  base.py  fhnw.py  geometry.py  image.py  sensor.py  std.py
src/lerobot_ros/test/: test_convert.py
src/rust_py_timer/: Cargo.toml  REAMDE.md  pyproject.toml  rust_py_timer.pyi
src/rust_py_timer/src/: lib.rs
src/so101/: package.xml  setup.cfg  setup.py
src/so101/launch/: so101.py
src/so101/so101/: so101_follower.py  so101_leader.py
