<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lerobot_ros</name>
  <version>0.0.0</version>
  <description>This packages provides utilities for working with the LeRobot ecosystem.</description>
  <maintainer email="sandro@sandrocovo.ch">Sandro Covo</maintainer>
  <license>MIT</license>
  
  <build_depend>lerobot_interfaces</build_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
